; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_sossi.c__set_timing.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_sossi.c__set_timing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@sossi = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SOSSI_INIT1_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @_set_timing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_set_timing(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sossi, i32 0, i32 1), align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sossi, i32 0, i32 0), align 8
  %10 = load i32, i32* %4, align 4
  %11 = sdiv i32 %9, %10
  %12 = call i32 @clk_set_rate(i32 %8, i32 %11)
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sossi, i32 0, i32 1), align 4
  %14 = call i32 @clk_enable(i32 %13)
  %15 = load i32, i32* @SOSSI_INIT1_REG, align 4
  %16 = call i32 @sossi_read_reg(i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = and i32 %17, -1072693249
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 %19, 20
  %21 = load i32, i32* %6, align 4
  %22 = shl i32 %21, 24
  %23 = or i32 %20, %22
  %24 = load i32, i32* %7, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* @SOSSI_INIT1_REG, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @sossi_write_reg(i32 %26, i32 %27)
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sossi, i32 0, i32 1), align 4
  %30 = call i32 @clk_disable(i32 %29)
  ret void
}

declare dso_local i32 @clk_set_rate(i32, i32) #1

declare dso_local i32 @clk_enable(i32) #1

declare dso_local i32 @sossi_read_reg(i32) #1

declare dso_local i32 @sossi_write_reg(i32, i32) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
